app/pinax-authenticator/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: pinax-cloud-backend
  name: pinax-authenticator
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/pinax-authenticator`)
      kind: Rule
      services:
        - name: pinax-authenticator
          port: 8080
